--- a/Shopez-One-Stop-Shop-For-Online-Purchases-main/README
+++ b/Shopez-One-Stop-Shop-For-Online-Purchases-main/README
@@ -77,4 +77,4 @@ All API endpoints are tested with Postman.
 
 Ensure CORS is enabled if hosting frontend separately.
 
-✨ Built with ❤️ by Damera Sai Sreeja, Gowru Sujitha, B Yoshik, Yaswath Gunkala, Kandati Vandana ✨
+✨ Built with ❤️ by Damera Sai Sreeja, Gowru Sujitha, B Yoshik, Yaswanth Gunakala, Kandati Vandana ✨
